--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "post",
+  "name": "bradly",
   "version": "0.1.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yeffasol/post.git"
+    "url": "git+https://github.com/yeffasol/bradly.git"
   },
   "author": "Marat",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^6.3.5",
     "browser-sync": "^2.11.2",
     "css-mqpacker": "^4.0.1",
-    "cssnext": "^1.8.4",
     "csswring": "^4.2.2",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
@@ -30,12 +28,12 @@
     "gulp-uglify": "^1.5.3",
     "gulp.spritesmith": "^6.2.1",
     "imagemin-pngquant": "^4.2.2",
+    "postcss-custom-media": "^5.0.1",
     "postcss-short": "^1.4.0",
     "postcss-sorting": "^1.2.2",
     "precss": "^1.4.0"
   },
   "scripts": {
-    "test": "editorconfig-tools check *",
     "build": "gulp",
     "start": "gulp"
   }
