--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^6.0.0",
     "gulp-uglify": "^1.5.3",
-    "gulp.spritesmith": "^6.2.1",
     "imagemin-pngquant": "^4.2.2",
     "postcss-custom-media": "^5.0.1",
+    "postcss-easysprites": "^0.1.3",
     "postcss-short": "^1.4.0",
     "postcss-sorting": "^1.2.2",
     "precss": "^1.4.0"
   },
   "scripts": {
-    "build": "gulp",
+    "build": "gulp build",
     "start": "gulp"
   }
 }
